# $Id$

MAINTAINERCLEANFILES =		$(srcdir)/Makefile.in

EXTRA_DIST =			dnsstats_cacti.sh \
				README-dnsstats \
				eemo_cacti_DNSSEC_queries.xml \
				eemo_cacti_IP_types.xml \
				eemo_cacti_common_queries.xml \
				eemo_cacti_protocol_types.xml \
				eemo_cacti_query_classes.xml

sbin_SCRIPTS =			dnsstats_cacti.sh

doc_DATA =			README-dnsstats \
				eemo_cacti_DNSSEC_queries.xml \
				eemo_cacti_IP_types.xml \
				eemo_cacti_common_queries.xml \
				eemo_cacti_protocol_types.xml \
				eemo_cacti_query_classes.xml
